# paparazzi

./: .gitignore  .gitmodules  .~lock.navBlock4.csv#  99-usb-quadcopter.rules  navBlock0.csv  navBlock1.csv  navBlock2.csv  navBlock3.csv  navBlock4.csv  navBlock5.csv  q  test.xml
camera_pylon/: nodelet_plugins.xml
cameratracking/: config.json  start-camera.sh  start_camera.sh
cameratracking/src/CameraTracking/camera_pylon/: CMakeLists.txt
cameratracking/src/CameraTracking/camera_pylon/cfg/: Camera.cfg
cameratracking/src/CameraTracking/camera_pylon/launch/: cams.launch
cameratracking/src/CameraTracking/camera_pylon/pylon5/include/: _GenICamVersion.h
cameratracking/src/CameraTracking/camera_pylon/pylon5/include/GenApi/: EventAdapterCL.h  INodeMapDyn.h
cameratracking/src/CameraTracking/camera_pylon/pylon5/include/pylon/: DeviceClass.h  PylonLinkage.h  PylonVersionNumber.h  WaitObject.h  _ImageFormatConverterParams.h
cameratracking/src/CameraTracking/camera_pylon/pylon5/include/pylon/gige/: _GigEEventParams.h
cameratracking/src/CameraTracking/camera_pylon/pylon5/include/pylon/usb/: _UsbChunkData.h  _UsbEventParams.h  _UsbStreamParams.h  _UsbTLParams.h
cameratracking/src/CameraTracking/camera_pylon/src/: cam_node.cpp
conf/: #conf.xml#  #control_panel.xml#  Makefile.nps  conf.xml  conf_example.xml  control_panel.xml  control_panel_example.xml  messages.xml
docker/: Makefile  run.sh
scripts/: 99-usb-quadcopter.rules  enable_basestation  start-paparazzi.sh  start_cameratracking.sh
swarm_doc/: master.tex
tracking/: .gitignore  CMakeLists.txt  (+1 more)
(+305 files in other folders)
